fix: When defaultWrapCode is set to true, line numbers greater than 10 will be wrapped to a new line

--- a/packages/core/src/theme/components/CodeBlock/index.scss
+++ b/packages/core/src/theme/components/CodeBlock/index.scss
@@ -76,7 +76,6 @@
     & .line::before {
       content: counter(step);
       counter-increment: step;
-      width: 1rem;
       margin-right: 1rem;
       display: inline-block;
       text-align: right;
